# Embedded-Systems-Software

./: README.md
.devcontainer/: devcontainer.json
Lab01/: .gitignore  Backup Of Lab01.pdsbak  Cargo.toml  Last Loaded Lab01.pdsbak  memory.x  scheme.pdsprj
Lab01/.cargo/: config.toml
Lab01/src/: main.rs
Lab02/src/: main.rs
Lab03/src/: main.rs
Lab03MP/: .gitignore  build.gradle.kts  settings.gradle.kts
Lab03MP/src/nativeMain/kotlin/com/github/hummel/ess/lab3/: Main.kt
Lab04/: Cargo.toml  scheme.pdsprj
Lab04/.devcontainer/: Dockerfile
Lab04/src/: main.rs
src/: main.rs
Методы/: ПОВС 2024. ЛР 1.docx  ПОВС 2024. ЛР 2.docx  ПОВС 2024. ЛР 3.docx  ПОВС 2024. ЛР 4.docx
