[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
nb = "1.1.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.5.0"
libm = "0.2"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

[[bin]]
name = "program"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = true
lto = false

[profile.release]
codegen-units = 1
debug = false
lto = true
strip = "debuginfo"
